@@ -1,7 +1,0 @@
-package uk.co.nickthecoder.itchy.util;
-
-public class SkipMessage extends RuntimeException
-{
-    private static final long serialVersionUID = 1L;
-
-}
